# web-starter-app

./: .clang-format  .gitignore  CMakeLists.txt  Readme.md  mise.toml
assets/: home.html  index.html  styles.css
docker/: Dockerfile  compose.yml
src/: main.cc  main.cpp
web/: index.html  package.json  vite.config.ts
web/src/: app.tsx  index.css
web/src/components/: basic.tsx  citypanel.tsx  content.tsx  forecastpanel.tsx  header.tsx
web/src/components/ui/: chart.tsx
web/src/lib/: api.ts  model.ts  validator.ts
